# Court-Data-Fetcher-

./: Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  app.py  docker-compose.yml  init_db.py  models.py  pyproject.toml  requirements.txt  run.py
instance/: court_data.db
services/: __init__.py  court_scraper.py  pdf_handler.py
templates/: base.html  case_details.html  error.html  index.html  stats.html
tests/: conftest.py  test_app.py  test_models.py
